src/App.scss
@import "./index.scss";

.App {
  position: relative;
  width: 100%;
  min-height: 100%;
}

.overlay {
  position: absolute;
  top: 60px;
  left: 0;
  z-index: 10;

  min-height: calc(100% - 60px);
  width: 100%;
  background: rgba(57, 55, 72, 0.22);
}

